@@ -4,6 +4,11 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [Unreleased]
+### Fixed
+- [FRONTEND] [CLONE] Resolve GUI loading problems when cloning an existing Frontend
+- [FRONTEND] [FILEBEAT] Avoid overriding default module config for all Frontends when changed in one
+
 ## [2.9.0] - 2023-07-20
 ### Removed
 - [LOG_FORWARDER] [ELASTICSEARCH] RateLimit settings
